# project_roulette

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  project_roulette.py  pyproject.toml
alembic/: env.py
alembic/versions/: af53db99e207_add_description_to_projects.py
core/: main.py  settings.py
core/database/: crud.py  database.py  models.py
core/routers/: __init__.py  catalog.py  ensable_project.py  health.py
core/settings/: default.py
data/: data.yaml
docs/: about_project.md  database.md  endpoints.md  notes_to_learn.md
tests/: conftest.py
tests/integration/: test_ollama_health.py  test_postgres_health.py
tests/test_database/: test_crud.py  test_database.py  test_seed.py
tests/test_fastapi_endpoints/: test_health.py
tests/test_integration/: test_ollama_health.py  test_postgres_health.py
