[project]
name = "project-roulette"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "psycopg>=3.3.4",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.15",
    "ty>=0.0.42",
]


[tool.ty.src]
exclude = [
    ".venv",
    "build",
    "dist",
    "alembic/versions",
    "tests/integration/test_postgres_health.py",
]
